# exact-covers

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: domino_chessboard.rs  graceful.rs  langford_pairs.rs  polycube_packing.rs
misc/: katex-header.html
src/: dc.rs  dl.rs  indices.rs  lib.rs  problem.rs  xc.rs  xcc.rs
