[package]
name = "exact-covers"
version = "0.3.0"
description = "An implementation of Knuth's algorithm for solving the exact cover problem with colors"
authors = ["Hugo Sanz González <hugo@hgsg.me>"]
license = "MIT"
homepage = "https://github.com/hsanzg/exact-covers"
documentation = "https://docs.rs/exact-covers"
repository = "https://github.com/hsanzg/exact-covers"
keywords = ["exact-cover", "color-constraints", "dancing-cells", "combinatorial-search"]
categories = ["algorithms", "data-structures", "mathematics"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Taken from https://docs.rs/rustdoc-katex-demo/latest/rustdoc_katex_demo/
# To build locally, run RUSTDOCFLAGS="--html-in-header misc/katex-header.html" cargo +nightly doc -Zunstable-options -Zrustdoc-scrape-examples --no-deps --document-private-items
[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--html-in-header", "misc/katex-header.html"]

[[example]]
name = "langford_pairs"
doc-scrape-examples = true

[[example]]
name = "polycube_packing"
doc-scrape-examples = true

[dev-dependencies]
smallvec = "2.0.0-alpha.6" # for polycube_packing example
